--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.3.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cache-breaker": "^1.0.0",
     "gulp-changed": "^1.0.0",
     "gulp-eslint": "^2.0.0",
     "gulp-gzip": "^1.2.0",
@@ -79,5 +80,9 @@
   "scripts": {
     "test": "./node_modules/.bin/gulp test"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bower": "^1.7.9",
+    "gulp-concat-sourcemap": "^1.3.1"
+  }
 }
